Inserção de Método de Busca Atendimentos por ClienteId
